--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<html>
-	<head>
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
-		</style>
-	</head>
-	<body>
-    <script src="js/three.js"></script>
-    <script src="js/display.js"></script>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Remember Life</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="style/style.css">
+
+  </head>
+  <body onload="init()">
+
+    <script src="./lib/three.js"></script>
+    <script src="./lib/OrbitControls.js"></script>
+    <script src="./lib/VREffect.js"></script>
+    <script src="./lib/StereoEffect.js"></script>
+    <script src="./lib/DeviceOrientationControls.js"></script>
+
+    <script src="./js/display.js"></script>
+  </body>
 </html>
