--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./lib/VREffect.js"></script>
     <script src="./lib/StereoEffect.js"></script>
     <script src="./lib/DeviceOrientationControls.js"></script>
+    <script src="./lib/CanvasRenderer.js"></script>
 
     <script src="./js/display.js"></script>
   </body>
