--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="style/style.css">
 
   </head>
   <body onload="init()">
@@ -16,6 +15,9 @@
     <script src="./lib/StereoEffect.js"></script>
     <script src="./lib/DeviceOrientationControls.js"></script>
     <script src="./lib/CanvasRenderer.js"></script>
+    <script src="./lib/DDSLoader.js"></script>
+    <script src="./lib/MTLLoader.js"></script>
+    <script src="./lib/OBJLoader.js"></script>
 
     <script src="./js/display.js"></script>
   </body>
