wooden floor and rectangular light source

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script src="./lib/MTLLoader.js"></script>
   <script src="./lib/OBJLoader.js"></script>
 
-  <script src="./js/display.js"></script>
+  <script src="./js/display2.js"></script>
 
 </body>
 
