--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
   <title>Remember Life</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">  
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-  <button id='spotify-login-button'>spotify login button</button>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  <script src="./js/SpotifyAPI.js"></script>
-
+    <div class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1">
+                        <h1 class="brand-heading">jìdé.life</h1>
+                        <span id="typed1"></span> <br><br>
+                        <button id='spotify-login-button' class="btn btn-primary">spotify login button</button>
+                        <fb:login-button id="fbBtn" scope="public_profile,email,user_photos,user_about_me,user_hometown,user_birthday" onlogin="checkLoginState();"></fb:login-button>  
+                        <button id="start3DViewBtn" class="btn btn-primary" type="button" onclick="init()">Begin</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div id="particles-js">  </div>
+  <script src="./js/particles.min.js"></script>
+  <script src="./js/app.js"></script> -->
+  <script src="./js/typed.min.js"></script>
+  <script src="./js/welcome.js"></script>
   <script src="./js/FacebookAPI.js"></script>
-  <fb:login-button scope="public_profile,email,user_photos,user_about_me,user_hometown,user_birthday" onlogin="checkLoginState();">
-  </fb:login-button>
-
-  <button type="button" onclick="init()">Begin</button>
+  <script src="./js/SpotifyAPI.js"></script>
+  
 
   <script src="./lib/three.js"></script>
   <script src="./lib/OrbitControls.js"></script>
