--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
   <script src="./lib/three.js"></script>
   <script src="./lib/OrbitControls.js"></script>
+  <script src="./lib/FirstPersonControls.js"></script>
   <script src="./lib/VREffect.js"></script>
   <script src="./lib/StereoEffect.js"></script>
   <script src="./lib/DeviceOrientationControls.js"></script>
