--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Remember Life</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
@@ -20,7 +20,7 @@
                         <h1 class="brand-heading">jìdé.life</h1>
                         <span id="typed1"></span> <br><br>
                         <button id='spotify-login-button' class="btn btn-primary">spotify login button</button>
-                        <fb:login-button id="fbBtn" scope="public_profile,email,user_photos,user_about_me,user_hometown,user_birthday" onlogin="checkLoginState();"></fb:login-button>  
+                        <fb:login-button id="fbBtn" scope="public_profile,email,user_photos,user_about_me,user_hometown,user_birthday" onlogin="checkLoginState();"></fb:login-button>
                         <button id="start3DViewBtn" class="btn btn-primary" type="button" onclick="init()">Begin</button>
                     </div>
                 </div>
@@ -31,16 +31,18 @@
   <script src="./js/particles.min.js"></script>
   <script src="./js/app.js"></script> -->
   <script src="./js/typed.min.js"></script>
-  <script src="./js/welcome.js"></script> 
+  <script src="./js/welcome.js"></script>
   <script src="./js/SpotifyAPI.js"></script>
   <script src="./js/FacebookAPI.js"></script>
 
 
   <script src="./lib/three.js"></script>
+  <!-- <script src="./lib/FirstPersonControls.js"></script> -->
+  <!-- <script src="./lib/VREffect.js"></script> -->
+  <script src="./lib/WebVR.js"></script>
+  <script src="./lib/VRController.js"></script>
+  <!-- <script src="./lib/StereoEffect.js"></script> -->
   <script src="./lib/OrbitControls.js"></script>
-  <script src="./lib/FirstPersonControls.js"></script>
-  <script src="./lib/VREffect.js"></script>
-  <script src="./lib/StereoEffect.js"></script>
   <script src="./lib/DeviceOrientationControls.js"></script>
   <script src="./lib/CanvasRenderer.js"></script>
   <script src="./lib/DDSLoader.js"></script>
