--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <script src="./lib/WebVR.js"></script>
   <script src="./lib/VRController.js"></script>
   <!-- <script src="./lib/StereoEffect.js"></script> -->
-  <script src="./lib/OrbitControls.js"></script>
+  <!-- <script src="./lib/OrbitControls.js"></script> -->
   <script src="./lib/DeviceOrientationControls.js"></script>
   <script src="./lib/CanvasRenderer.js"></script>
   <script src="./lib/DDSLoader.js"></script>
